--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "firebase": "^9.22.1",
     "framer-motion": "^10.12.10",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
